<resources>
    <string name="app_name">PDM_2021_P2_LABORATORIO2</string>
    <string name="txtTitulo">MENÚ</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtCuenta">Cuenta</string>
    <string name="txtCorreo">Correo</string>
    <string name="txtClase">Clase</string>
    <string name="btnRM">Realizar Matrícula</string>
    <string name="btnRA">Registrar Alumno</string>
    <string name="editTextCodigo">Codigo</string>
    <string name="editTextNombre">Nombre</string>
    <string name="editTextSeccion">Seccion</string>
    <string name="editTextHora">Hora</string>
    <string name="editTextEdificioPiso">Edificio/Piso</string>
    <string name="editTextAula">Aula</string>
    <string name="txvRegistrarClase">REGISTRAR CLASE</string>
    <string name="txvRegistrar">REGISTRAR</string>
    <string name="txvIngresarNotas">INGRESAR NOTAS</string>
    <string name="btnIN">Ingresar Notas</string>
    <string name="todo">Registro</string>
    <string name="txtAlumno">Alumno</string>
    <string name="txtMatricula">MATRICULA</string>
    <string name="txtAsignatura">Asignatura</string>
    <string name="btnRC">Registrar Clase</string>
    <string name="eeditTextAcumulativo">Acumulativo</string>
    <string name="editTextExamen">Examen</string>
    <string name="editTextTotal">Total</string>
    <string name="txvEnviar">ENVIAR</string>
    <string name="txtRegistrarAlumno">REGISTRAR ALUMNO</string>
    <string name="btnAgregar">weyYa</string>
    <string name="todo1">TODO</string>
    <string name="Datos">Enviar notas de %S, en la clase %S por el valor de %S</string>
    <string name="resultadoalumno">El alumno %S, con numero de cuenta %S y correo %S, ha sido matriculado con exito</string>
    <string name="txvRegresar">Regresar</string>
    <string name="resultadoClase">La clase %S, con codigo %S  esta en el edificio %S, con horario %S en el aula %S, con seccion %S </string>
</resources>