<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/txtTitulo"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/txtNombre"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtTitulo"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <TextView
        android:id="@+id/txvClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/txtClase"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txvNombre"
        app:layout_constraintTop_toBottomOf="@+id/txvNombre" />

    <TextView
        android:id="@+id/txvMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/txtMatricula"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txvClase"
        app:layout_constraintTop_toBottomOf="@+id/txvClase" />

    <TextView
        android:id="@+id/txvNotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/txtNota"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txvMatricula"
        app:layout_constraintTop_toBottomOf="@+id/txvMatricula" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_height="120dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono" />

</androidx.constraintlayout.widget.ConstraintLayout>