<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo6"
    tools:context=".EnviarCorreoActivity">


    <EditText
        android:id="@+id/txtcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="8"
        android:gravity="center"
        android:hint="@string/txtCorreo"
        android:inputType="textPersonName"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/lstCView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDatos"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtDatos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="27dp"
        android:text="¡Datos"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtcorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewNotas" />

    <ImageView
        android:id="@+id/imageViewNotas"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginBottom="44dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/txtDatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/enviarcorreo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="118dp"
        android:contentDescription="@string/todo"
        android:onClick="cambioPantalla"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@+id/imageViewNotas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/retroceder" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/enviara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lstCView"
        app:srcCompat="@android:drawable/ic_dialog_email"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/lstCView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="63dp"
        app:layout_constraintBottom_toTopOf="@+id/enviara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcorreo" />

</androidx.constraintlayout.widget.ConstraintLayout>